# Prism

./: Google AI Discussion.txt  LICENSE  Pin notes.ods  README.md
design/Rev01/: Rev01.kicad_prl  Rev01.kicad_pro  Rev01.kicad_sch
docs/: AddressMap.txt  NoteOn138.txt
published/Prism1_20250906_001/: qclock.png~
src/busmaster/: build.sh  busmaster.edif  busmaster.fit  busmaster.io  busmaster.jed  busmaster.pin  busmaster.tt3  busmaster.v  clean.sh
src/inc/: bios.inc  util.inc
src/iris/: README.md  ball.v  default_pal.txt  digits.v  fifo.v  fifo_tb.v  iris65.v  map_data.txt  palette.v  ram.v  sync_generator.v  tb_ball.v  tb_iris65.v  tilemap.v  tiles.txt  uart.v  uart_receive_tb.v  uart_receiver.v  uart_transmit.v
src/rom/: CMakeLists.txt  prism.cfg
src/rom/bios/: io.s  reset.s  syscall.s  vectors.s  zp.s
src/rom/bios/drivers/Prism1/: prism1.s  rtc.s  u26C92.s
src/rom/bios/drivers/Simulator/: ksim.s  ksim_io.s
src/rom/include/: io.inc  str.inc  zp.inc
src/rom/lemon/: consts.inc  lemon.inc  lemon.s  parse.inc  parse.s  rodata.s
src/rom/lemon/cmd/: asm.s  basic.s  card.s  dis.s  dump.s  load.s  run.s
src/rom/monitor/: monitor.s
